[gd_scene load_steps=7 format=3 uid="uid://iot438eu8aw8"]

[ext_resource type="Script" path="res://scenes/ui/menu/main_menu.gd" id="1_0xwdr"]
[ext_resource type="PackedScene" uid="uid://bucl1s8eaacb1" path="res://scenes/ui/button/audio_button.tscn" id="1_n3lxy"]
[ext_resource type="PackedScene" uid="uid://dhpuyrt7r605i" path="res://scenes/game_objects/music/background_music_player.tscn" id="3_ekank"]
[ext_resource type="PackedScene" uid="uid://8oueelfqnsuj" path="res://scenes/ui/menu/popup_object.tscn" id="3_txyyp"]
[ext_resource type="AnimationLibrary" uid="uid://clkwayymrxjft" path="res://assets/animations_ui/global_ui.res" id="4_csk3c"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yc004"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_0xwdr")

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0.780392)
custom_minimum_size = Vector2(256, 0)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer2" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(256, 0)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_yc004")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer2/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="PlayButton" parent="PanelContainer2/MarginContainer/VBoxContainer" instance=ExtResource("1_n3lxy")]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
size_flags_horizontal = 4
text = "PLAY"

[node name="TutorialButton" parent="PanelContainer2/MarginContainer/VBoxContainer" instance=ExtResource("1_n3lxy")]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
size_flags_horizontal = 4
text = "TUTORIAL"

[node name="OptionsButton" parent="PanelContainer2/MarginContainer/VBoxContainer" instance=ExtResource("1_n3lxy")]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
size_flags_horizontal = 4
text = "OPTIONS"

[node name="LogsButton" parent="PanelContainer2/MarginContainer/VBoxContainer" instance=ExtResource("1_n3lxy")]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
size_flags_horizontal = 4
text = "LOGS"

[node name="QuitButton" parent="PanelContainer2/MarginContainer/VBoxContainer" instance=ExtResource("1_n3lxy")]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
size_flags_horizontal = 4
text = "QUIT"

[node name="PopupObject" parent="." instance=ExtResource("3_txyyp")]
visible = false
layout_mode = 1
offset_left = -100.0
offset_top = -75.0
offset_right = 100.0
offset_bottom = 75.0
title = "API key missing"
description = "Set OpenAI API key under options."
is_information_popup = true

[node name="BackgroundMusicPlayer" parent="." instance=ExtResource("3_ekank")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"global_ui": ExtResource("4_csk3c")
}

[connection signal="pressed" from="PanelContainer2/MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="PanelContainer2/MarginContainer/VBoxContainer/TutorialButton" to="." method="_on_tutorial_button_pressed"]
[connection signal="pressed" from="PanelContainer2/MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="PanelContainer2/MarginContainer/VBoxContainer/LogsButton" to="." method="_on_logs_button_pressed"]
[connection signal="pressed" from="PanelContainer2/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
